--- a/index.css
+++ b/index.css
@@ -15,6 +15,8 @@ body {
 
 header {
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 footer ul li {
@@ -136,6 +138,11 @@ footer p {
   padding: 40px;
   font-weight: 600;
   font-size: 17px;
+}
+
+#date-time {
+  align-self: flex-end;
+  margin: 1% 2% 4%;
 }
 
 .hidden {
